--- a/fotos.html
+++ b/fotos.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="style01.css">
+    <link rel="stylesheet" href="style.css">
     <title>Fotos</title>
 </head>
 <body>
@@ -48,7 +48,7 @@
 <!-- começo do login  -->
 
     <nav class="sombra navbar navbar-expand-lg bg-light navbar-light p-3 fixed-top ">
-        <a  class="navbar-brand " href="index01.html">
+        <a  class="navbar-brand " href="index.html">
             <img src="logos/caravan.svg">
         </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
@@ -63,15 +63,15 @@
                      Locais
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#">California</a>
-                      <a class="dropdown-item" href="#">Paris</a>
-                      <a class="dropdown-item" href="#">Dublin</a>
+                      <a class="dropdown-item" href="fotos.html">California</a>
+                      <a class="dropdown-item" href="fotos.html">Paris</a>
+                      <a class="dropdown-item" href="fotos.html">Dublin</a>
                     </div>
                 
                 <li class="nav-item"><a class="nav-link" href="planos.html">Planos</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Contato</a></li>
+                <li class="nav-item"><a href="contato.html" class="nav-link">Contato</a></li>
                 <li class="nav-item"><a href="#"data-toggle="modal" data-target="#modallogin" class="nav-link">Login</a></li>
-                <li class="nav-item" ><a href="#"  class=" btn btn-outline-primary ml-md-3" >Inscreva-se</a></li>
+                <li class="nav-item" ><a href="inscreva-se.html"  class=" btn btn-outline-primary ml-md-3" >Inscreva-se</a></li>
             </ul>
         </div>
     </nav>
