--- a/inscreva-se.html
+++ b/inscreva-se.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="style01.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Modal do login -->
@@ -54,7 +54,7 @@
 <!-- começo do login  -->
 
     <nav class="sombra navbar navbar-expand-lg bg-light navbar-light p-3 fixed-top ">
-        <a  class="navbar-brand " href="index01.html">
+        <a  class="navbar-brand " href="index.html">
             <img src="logos/caravan.svg">
         </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
@@ -75,7 +75,7 @@
                     </div>
                 
                 <li class="nav-item"><a class="nav-link" href="planos.html">Planos</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Contato</a></li>
+                <li class="nav-item"><a href="contato.html" class="nav-link">Contato</a></li>
                 <li class="nav-item"><a href="#"data-toggle="modal" data-target="#modallogin" class="nav-link">Login</a></li>
                 <li class="nav-item" ><a href="#"  class=" btn btn-outline-primary ml-md-3" >Inscreva-se</a></li>
             </ul>
