--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 <!-- footer -->
 <section class="conteiner m-0" style="background-color:#0A0A0A ;">
   <div class="row py-4 m-0 ">
-    <div class=" col-3  d-flex justify-content-center">
+    <div class=" col-lg-3 col-md-6 col-6  d-flex justify-content-center">
       <ul class="list-unstyled text-white">
         <h6 class="text-white">PÁGINAS</h6>
         <li><a href="">Planos</a></li>
@@ -348,7 +348,7 @@
       </ul>
     </div>
 
-    <div class=" col-3 d-flex justify-content-center">
+    <div class=" col-lg-3 col-md-6 col-6 d-flex justify-content-center">
         <ul class="list-unstyled text-white ">
           <h6 class="text-white">PÁGINAS</h6>
           <li><a href="">California</a></li>
@@ -357,7 +357,7 @@
         </ul>
       </div>
 
-      <div class="col-3 d-flex justify-content-center">
+      <div class="col-lg-3 col-md-6 col-6  d-flex justify-content-center">
           <ul class="list-unstyled text-white">
             <h6 class="text-white">DADOS DE CONTATO</h6>
             <li class="text-white-50">caravan@caravan.com.br</li>
@@ -366,7 +366,7 @@
           </ul>
         </div>
 
-        <div class="col-3 d-flex justify-content-center">
+        <div class="col-lg-3 col-md-6 col-6  d-flex justify-content-center">
             <ul class="list-unstyled text-white">
               <h6 class="text-white">REDES SOCIAIS</h6>
               <li><a href="https://www.facebook.com" target="_blank"><button type="button" class="btn btn-outline-secondary mb-2"style="width:140px;">Facebook</button></a></li>
